# InterpretationoDreams

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/dreamsboard/: Makefile  README.md  pyproject.toml
src/dreamsboard/collection/: __init__.py  local_collection.py  paper_collection.py  web_collection.py
src/dreamsboard/dreamsboard/agent/: REACT_简历任务提取.ipynb  convert_llama_index_jsonl_to_llama_factory.py  eval_questions_48q.txt  finetuning_events_192q.json  finetuning_events_192q.jsonl  gemini_eval_questions_288q.txt  gemini_finetuning_events_168q.jsonl  gemini_finetuning_events_220q_1710172216.2676702.jsonl  gemini_questions_360q.txt  gemini_train_questions_1152q.txt  gemini_train_questions_192q.txt  geminifinetuning_events_192q.json  gen_agent_finetuning.py  gen_train_questions.py  glm_eval_questions_288q.txt  glm_q_gemini_a_finetuning_events_0q_1710251602.6634.jsonl  glm_q_gemini_a_finetuning_events_0q_1710251894.251382.jsonl  glm_q_gemini_a_finetuning_events_0q_1710251961.6617868.jsonl  glm_q_gemini_a_finetuning_events_0q_1710252096.3275669.jsonl  glm_q_gemini_a_finetuning_events_0q_1710252178.6596577.jsonl  glm_q_gemini_a_finetuning_events_0q_1710252260.2858505.jsonl  glm_q_gemini_a_finetuning_events_0q_1710252499.3177001.jsonl  glm_q_gemini_a_finetuning_events_0q_1710254319.7411973.jsonl  glm_q_gemini_a_finetuning_events_0q_1717232262.8204503.jsonl  glm_q_gemini_a_finetuning_events_10q_1710252348.8029423.jsonl  glm_q_gemini_a_finetuning_events_10q_1710252636.5493147.jsonl  glm_q_gemini_a_finetuning_events_10q_1710254467.4106233.jsonl  glm_q_gemini_a_finetuning_events_160q_1710254187.680493.json  glm_q_gemini_a_finetuning_events_160q_1710254187.680493.jsonl  glm_q_gemini_a_finetuning_events_20q_1710254564.0533705.jsonl  glm_q_gemini_a_finetuning_events_30q_1710254667.8175108.jsonl  glm_q_gemini_a_finetuning_events_40q_1710254738.9714754.jsonl  glm_q_gemini_a_finetuning_events_50q_1710254856.3103752.jsonl  glm_q_gemini_a_finetuning_events_60q_1710254943.6595397.jsonl  glm_q_gemini_a_finetuning_events_70q_1710255020.9894297.jsonl  glm_questions_360q.txt  glm_train_questions_1152q.txt  react_agent_build_query_engine_tools.py  react_agent_finetune_cleaning.py  react_tools_utils.py  (+1 more)
src/dreamsboard/dreamsboard/chains/: base.py  prompts.py
src/dreamsboard/dreamsboard/collection/: __init__.py  collection.py  local_collection.py  paper_collection.py  web_collection.py
src/dreamsboard/dreamsboard/common/: __init__.py  callback.py  csv_data.py  registry.py  struct_type.py  try_parse_json_object.py
src/dreamsboard/dreamsboard/document_loaders/: __init__.py  csv_structured_storyboard_loader.py  kor_loader.py  ner_loader.py  structured_storyboard_loader.py
src/dreamsboard/dreamsboard/engine/: constants.py  engine_builder.py  loading.py  registry.py  schema.py  utils.py
src/dreamsboard/dreamsboard/generate/: __init__.py  code_executor.py  code_generate.py  run_generate.py
src/dreamsboard/dreamsboard/store/: structured_dreams_storyboard_store.py
src/dreamsboard/dreamsboard/templates/: __init__.py  ai_template.py-tpl  base_template.py-tpl  base_template_system.py-tpl  dreams_query_template.py-tpl  engine_template.py-tpl  query_template.py-tpl  simple_engine_template.py-tpl
src/dreamsboard/dreamsboard/vector/: base.py  faiss_kb_service.py
src/dreamsboard/scripts/: lint_imports.sh
src/dreamsboard/tests/: conftest.py  story_board_dreams_generation_chain.py  structured_storyboard_csv_builder.py  test_engine.py  test_engine_store.py  test_engine_storyboard.py  test_engine_storyboard_store.py  test_engine_storyboard_store_drop_his.py  test_engine_storyboard_store_print.py  test_engine_storyboard_store_text.py  test_template.py  图检索增强生成（GraphRAG）.ipynb
src/dreamsboard/tests/kor/: test_kor.py
src/dreamsboard/tests/storage/: index_store.json  template_store.json
src/dreamsboard/tests/test1/: 01_宝今天煮饺子把皮煮开了原来是喜欢你露馅儿了_阿七.md  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test1.py
src/dreamsboard/tests/test2/: 02_尊嘟假嘟呀_今天要吃三碗饭.md  test_engine_storyboard_store_drop_his.py  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test1.py
src/dreamsboard/tests/test3/: 03_报备式恋爱请查收_澈洌.md  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test3.py
src/dreamsboard/tests/test4/: 04_心里闷闷的可能就是有点想你_辰夕.md  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test4.py
src/dreamsboard/tests/test5/: 05_报告今天是香香的姐姐_阿七.md  test_engine_storyboard_store_drop_his.py  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test5.py
src/dreamsboard/tests/test6/: 06_今日的温柔报告_兔兔没有牙.md  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test6.py
src/dreamsboard/tests/test7/: 07_报告今天发工资啦啦啦啦_阿七.md  test_engine_storyboard_store_drop_his.py  test_engine_storyboard_store_print.py  test_engine_storyboard_store_test7.py
src/dreamsboard/tests/test8/: 08_78块的冰淇淋掉地上了呜呜呜呜_阿七.md  test_engine_storyboard_store_print.py
src/dreamsboard/tests/test_aemo_representation_chain/: prompts.py  test.json  test_aemo_representation_chain.py
src/dreamsboard/tests/test_batch_extract/: test_batch_extract.py
src/dreamsboard/tests/test_builder_task_step/: prompts.py  test_builder_task_step.py
src/dreamsboard/tests/test_collection/: test_loader__into_database.py  test_loader_into_database.py  test_query_database.py  test_splitter.py
src/dreamsboard/tests/test_event_manager/: test_event_manager.py  test_iter.py
src/dreamsboard/tests/test_glm4-9b/: test_engine_storyboard_store_test_glm4_9b.py
src/dreamsboard/tests/test_glm4_airx/: test_engine_storyboard_store_test_glm4_airx.py
src/dreamsboard/tests/test_gpt4o/: test_engine_storyboard_store_test_gpt4o.py
src/dreamsboard/tests/test_hydrology/: id46Bv3g_keyframe.csv  prompts.py  test_hydrology_store_test1.py
src/dreamsboard/tests/test_kor/: test_kor1.py  test_kor2.py  test_kor3.py
src/dreamsboard/tests/test_runnable/: test_create_structured_output_runnable.py  test_create_structured_output_runnable2.py
src/dreamsboard/tests/zhipu/: utils.py  (+2 more)
(+654 files in other folders)
